feat: public verification
